modifications to obey Youdao API user rules

--- a/YoudaoTranslator.popclipext/Config.plist
+++ b/YoudaoTranslator.popclipext/Config.plist
@@ -31,7 +31,7 @@
 		<key>en</key>
 		<string>Youdao Translator</string>
 		<key>zh-Hans</key>
-		<string>有道翻译</string>
+		<string>Youdao翻译扩展</string>
 	</dict>
 	<key>Version</key>
 	<integer>1</integer>
